--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -10,13 +10,13 @@ contextlib2==0.6.0
 cryptography==3.4.6
 distlib==0.3.0
 distro==1.4.0
-Flask==1.1.2
-Flask-Cors==3.0.10
+Flask
+Flask-Cors
 html5lib==1.0.1
 idna==2.8
 ipaddr==2.2.0
 itsdangerous==1.1.0
-Jinja2==2.11.3
+Jinja2
 lockfile==0.12.2
 MarkupSafe==1.1.1
 msgpack==0.6.2
@@ -32,11 +32,13 @@ requests==2.22.0
 retrying==1.3.3
 six==1.14.0
 urllib3==1.25.8
-webencodings==0.5.1
-Werkzeug==1.0.1
+webencodings
+Werkzeug
 PyJWT
 pyotp
 flask-jwt-extended
 apscheduler
 sqlalchemy
 mysql-connector-python
+playsound
+pygobject
